--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Contrail+One&family=Racing+Sans+One&family=Montserrat&family=Inter&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600;900&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap");
 
