--- a/src/style.css
+++ b/src/style.css
@@ -13,10 +13,11 @@ h2 {
   font-weight: 900;
   color: white;
   text-transform: uppercase;
+  font-size: 2vw;
 }
 
 h3 {
-  font-size: 30px;
+  font-size: 1.3vw;
 }
 
 h4 {
@@ -60,4 +61,14 @@ body {
   border-radius: 4px;
   margin: 0 10px;
   font-size: 13px;
+}
+
+@media screen and (max-width: 768px) {
+  h2 {
+    font-size: 40px;
+  }
+
+  h3 {
+    font-size: 30px;
+  }
 }
