--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Contrail+One&family=Racing+Sans+One&family=Montserrat&family=Inter&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600;900&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap");
 
 @tailwind base;
@@ -13,11 +11,12 @@ h2 {
   font-weight: 900;
   color: white;
   text-transform: uppercase;
-  font-size: 2vw;
+  font-size: 3vw;
 }
 
 h3 {
-  font-size: 1.3vw;
+  font-size: 15px;
+  font-style: italic;
 }
 
 h4 {
